style(frontend): 优化应用标题样式并更新中文翻译
- 添加 app-title CSS 类样式定义
- 设置标题颜色为 #2c3e50 字体大小为 18px
- 将中文翻译中的 "主机条目" 更新为 "Host条目"

--- a/frontend/src/locales/zh-CN.json
+++ b/frontend/src/locales/zh-CN.json
@@ -75,7 +75,7 @@
     },
     "localhostEditor": {
       "readOnlyHint": " (启用后无法修改)",
-      "enterHostEntries": "在此处输入主机条目..."
+      "enterHostEntries": "在此处输入Host条目..."
     },
     "mainPanel": {
       "selectHostGroupTitle": "选择一个Host分组进行编辑",
