feat(group): 添加远程组定时刷新功能
- 在AddGroupModal组件中添加刷新间隔选择器
- 添加StartRemoteGroupRefreshTimer和StopRemoteGroupRefreshTimer方法
- 实现定时刷新远程组内容的功能
- 添加多语言支持包括英文和中文
- 在RemoteHostEditor中集成刷新间隔配置
- 实现自动保存功能优化用户体验
- 添加定时器管理和生命周期控制

--- a/frontend/src/locales/en-US.json
+++ b/frontend/src/locales/en-US.json
@@ -71,7 +71,14 @@
       "remoteContentPlaceholder": "Remote content will be displayed here after refresh...",
       "getting": "Getting...",
       "fetchHostContent": "Fetch Host Content",
-      "saveChanges": "Save Changes"
+      "saveChanges": "Save Changes",
+      "refreshInterval": "Refresh Interval",
+      "selectRefreshInterval": "Select refresh interval",
+      "refreshDisabled": "Disabled",
+      "everyHour": "Every 1 hour",
+      "every4Hours": "Every 4 hours",
+      "every8Hours": "Every 8 hours",
+      "every24Hours": "Every 24 hours"
     },
     "localhostEditor": {
       "readOnlyHint": " (Cannot modify when enabled)",
